--- a/src/main/resources/templates/helloworld.html
+++ b/src/main/resources/templates/helloworld.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello world</title>
+    <link rel="stylesheet" th:href="@{/css/demo.css}" />
 </head>
 <body>
     <p th:text="'Time on server is ' + ${theDate}" class="green" />
